--- a/app/src/main/res/layout/action_mode_activity_layout.xml
+++ b/app/src/main/res/layout/action_mode_activity_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,11 +15,25 @@
         android:id="@+id/action_mode_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我，点我"
+        android:text="点我，仿复制粘贴"
+        android:background="#dfe7b7"
         android:padding="4dp"
+        android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/action_mode_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#dfe7b7"
+        android:padding="4dp"
+        android:layout_margin="4dp"
+        android:text="点我，action mode "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/action_mode_text"/>
 
 </android.support.constraint.ConstraintLayout>
