--- a/app/src/main/res/menu/action_mode_menu.xml
+++ b/app/src/main/res/menu/action_mode_menu.xml
@@ -3,14 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_mode_menu_1"
-        android:title="menu_1" />
+        android:title="menu_你"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/action_mode_menu_2"
-        android:title="menu_2" />
+        android:title="menu_好"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/action_mode_menu_3"
-        android:title="menu_3" />
+        android:title="menu_吗"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_mode_menu_4"
-        android:title="menu_4" />
+        android:title="menu_？"
+        app:showAsAction="ifRoom"/>
 </menu>
