--- a/app/src/main/res/layout/swipe_demo_drag_layout.xml
+++ b/app/src/main/res/layout/swipe_demo_drag_layout.xml
@@ -2,15 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="120dip"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tv_delete"
-        android:layout_width="match_parent"
+        android:id="@+id/swipe_demo_drag_follow"
+        android:layout_width="60dp"
         android:layout_height="80dip"
-        android:background="#ff000000"
+        android:background="#0ee138"
         android:gravity="center"
-        android:text="左滑区域"
+        android:text="左滑"
+        android:textColor="@android:color/white"
+        android:textSize="25sp" />
+    <TextView
+        android:id="@+id/swipe_demo_drag_delete"
+        android:layout_width="60dp"
+        android:layout_height="80dip"
+        android:background="#f10606"
+        android:gravity="center"
+        android:text="区域"
         android:textColor="@android:color/white"
         android:textSize="25sp" />
 
