--- a/app/src/main/res/layout/activity_ndk_jni_so_demo.xml
+++ b/app/src/main/res/layout/activity_ndk_jni_so_demo.xml
@@ -4,26 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ndkjnisoDemo.NdkJniSoDemoActivity">
 
     <TextView
-        android:id="@+id/aidl_text"
+        android:id="@+id/jni_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AIDL Demo 中服务端"
-        android:textAllCaps="false"
+        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/other_jni_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/aidl_text"/>
 
 </android.support.constraint.ConstraintLayout>
