Add a preference Demo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,11 @@
                 android:text="AppWidget demo"/>
 
             <Button
+                android:id="@+id/preferences_demo_btn"
+                style="@style/MainButtonStyle"
+                android:text="设置 Preferences 相关总结 demo"/>
+
+            <Button
                 android:id="@+id/btn_13"
                 style="@style/MainButtonStyle"
                 android:text="事件分发机制"/>
